--- a/index.html
+++ b/index.html
@@ -172,21 +172,26 @@
 <div class="fixed bottom-0 left-0 right-0 h-20 bg-background-light/80 dark:bg-background-dark/80 backdrop-blur-lg border-t border-slate-200 dark:border-zinc-800">
 <div class="flex h-full items-center justify-around px-4">
 <button class="flex flex-col items-center justify-center gap-1 text-primary">
+     <a href="index.html" class="flex flex-col items-center justify-center gap-1 text-primary"></a>
 <span class="material-symbols-outlined">home</span>
 <p class="text-xs font-bold">Home</p>
 </button>
 <button class="flex flex-col items-center justify-center gap-1 text-slate-500 dark:text-slate-400">
+    
+  <a href="order.html" class="flex flex-col items-center justify-center gap-1 text-slate-500 dark:text-slate-400">
 <span class="material-symbols-outlined">receipt_long</span>
 <p class="text-xs font-medium">Orders</p>
 </button>
-<button class="flex flex-col items-center justify-center gap-1 text-slate-500 dark:text-slate-400">
-<span class="material-symbols-outlined">favorite</span>
-<p class="text-xs font-medium">Favorites</p>
-</button>
-<button class="flex flex-col items-center justify-center gap-1 text-slate-500 dark:text-slate-400">
-<span class="material-symbols-outlined">person</span>
-<p class="text-xs font-medium">Profile</p>
-</button>
+<a href="favorite.html" class="flex flex-col items-center justify-center gap-1 text-slate-500 dark:text-slate-400">
+  <span class="material-symbols-outlined">favorite</span>
+  <p class="text-xs font-medium">Favorites</p>
+</a>
+
+<a href="user-profile.html" class="flex flex-col items-center justify-center gap-1 text-slate-500 dark:text-slate-400">
+  <span class="material-symbols-outlined">person</span>
+  <p class="text-xs font-medium">Profile</p>
+</a>
+
 </div>
 </div>
 </div>
